--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <lombok.version>1.16.18</lombok.version>
         <guava.version>21.0</guava.version>
         <gson.version>2.6.2</gson.version>
+        <spring.version>5.2.6.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -85,6 +86,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 
