--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <guava.version>21.0</guava.version>
         <gson.version>2.6.2</gson.version>
         <spring.version>5.2.10.RELEASE</spring.version>
+        <spring-boot.version>2.4.3</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -91,6 +92,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
     </dependencies>
 
