--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <guava.version>21.0</guava.version>
         <gson.version>2.6.2</gson.version>
         <spring.version>5.2.10.RELEASE</spring.version>
-        <spring-boot.version>2.4.3</spring-boot.version>
+        <spring-boot.version>2.3.9.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
