--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <gson.version>2.6.2</gson.version>
         <spring.version>5.2.10.RELEASE</spring.version>
         <spring-boot.version>2.3.9.RELEASE</spring-boot.version>
+        <twilio.version>7.54.2</twilio.version>
     </properties>
 
     <dependencies>
@@ -97,6 +98,25 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
             <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>${twilio.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-jackson</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt-impl</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
