--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.dir>${basedir}</main.dir>
-        <thingsboard.version>3.2.0PE</thingsboard.version>
-        <lombok.version>1.16.18</lombok.version>
-        <guava.version>21.0</guava.version>
+        <thingsboard.version>3.2.2PE</thingsboard.version>
+        <lombok.version>1.18.18</lombok.version>
+        <guava.version>28.2-jre</guava.version>
         <gson.version>2.6.2</gson.version>
-        <spring.version>5.2.6.RELEASE</spring.version>
-        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+        <spring.version>5.2.10.RELEASE</spring.version>
+        <spring-boot.version>2.3.9.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -108,10 +108,21 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5.1</version>
+                    <version>3.8.1</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <release>11</release>
+                        <compilerArgs>
+                            <arg>-Xlint:deprecation</arg>
+                            <arg>-Xlint:removal</arg>
+                            <arg>-Xlint:unchecked</arg>
+                        </compilerArgs>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
                 </plugin>
             </plugins>
