--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <scope>provided</scope>
             <version>${guava.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 
     <build>
